test/acceptance/parsing/failing/mixin-not-at-top.spun
get "http://google.com"
mixin
